<resources>
    <string name="app_name">BesideU</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect or the email has been registered</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="mod_password">修改密码</string>
    <string name="action_register_in_short">register</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_besideu">BesideuActivity</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="title_activity_location">LocationActivity</string>

    <string name="heremail">你的她他</string>
    <string name="deleteher">解除绑定</string>
    <string name="addher">添加绑定</string>
    <string name="addemail">她(他)的邮箱</string>
    <string name="applylist">申请列表</string>
    <string name="agree">同意</string>
    <string name="disagree">拒绝</string>
    <string name="handin">提交</string>
    <string name="message">留言内容</string>
    <string name="title_board">留言板</string>
    <string name="i">&#160;&#160;i&#160;</string>
    <string name="u">&#160;&#160;u&#160;</string>
</resources>
