<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_board">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/email_login_form"
            android:layout_alignParentStart="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_weight="8"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message"
                    android:maxLines="4"
                    android:singleLine="false"
                    android:inputType="textMultiLine"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_handin"
                style="?android:textAppearanceSmall"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/handin"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_board"
            android:id="@+id/title_board"
             />
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/board_listView"
            android:stackFromBottom="true"
            android:fadeScrollbars="true"
            android:fastScrollEnabled="true"
            android:scrollbarStyle="outsideInset"/>

    </LinearLayout>
</RelativeLayout>
